Changes to printing.